address referee comments except for the big one

--- a/41KCl_line_parameters.tex
+++ b/41KCl_line_parameters.tex
@@ -1,6 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{$^{41}$KCl Lines}
+\caption{Parameters of $^{41}$KCl lines obtained with Gaussian fits}
 \begin{tabular}{ccccccc}
 \label{tab:41KCl_salt_lines}
  J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
