--- a/KCl_line_parameters.tex
+++ b/KCl_line_parameters.tex
@@ -1,6 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{KCl Lines}
+\caption{Parameters of KCl lines obtained with Gaussian fits}
 \begin{tabular}{ccccccc}
 \label{tab:KCl_salt_lines}
  J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
