--- a/Na37Cl_line_parameters.tex
+++ b/Na37Cl_line_parameters.tex
@@ -1,6 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{Na$^{37}$Cl Lines}
+\caption{Parameters of Na$^{37}$Cl lines obtained with Gaussian fits}
 \begin{tabular}{ccccccc}
 \label{tab:Na37Cl_salt_lines}
  J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
