--- a/NaCl_line_parameters.tex
+++ b/NaCl_line_parameters.tex
@@ -1,6 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{NaCl Lines}
+\caption{Parameters of NaCl lines obtained with Gaussian fits}
 \begin{tabular}{ccccccc}
 \label{tab:NaCl_salt_lines}
  J$_u$ & J$_l$ & Frequency & Velocity & Amplitude & $\int T_A dv$ & E$_U$ \\
@@ -8,7 +8,7 @@
 \hline
 &\vspace{-0.75em}\\
 \multicolumn{7}{c}{$v = 1$} \\
-\vspace{-0.75em}\\ 
+\vspace{-0.75em}\\
  26 & 25 & 335.50656 & 5.5 (0.1) & 29.1 (0.8) & 339.9 (5.4) & 737.2 \\
  18 & 17 & 232.50998 & 5.4 (0.2) & 23.9 (0.7) & 396.6 (6.7) & 625.7 \\
 &\vspace{-0.75em}\\
