--- a/K_lines_in_band3.tex
+++ b/K_lines_in_band3.tex
@@ -1,6 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{All cataloged KCl lines in Band 3}
+\caption{All cataloged KCl lines in the Band 3 tuning}
 \begin{tabular}{ccccccccc}
 \label{tab:K_detections_B3}
 K Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
