--- a/Na_lines_in_band7.tex
+++ b/Na_lines_in_band7.tex
@@ -1,6 +1,6 @@
 \begin{table*}[htp]
 \centering
-\caption{All cataloged NaCl lines in Band 7}
+\caption{All cataloged NaCl lines in the Band 7 tuning}
 \begin{tabular}{ccccccccc}
 \label{tab:Na_detections_B7}
 Na Isotope & Cl Isotope & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
