complete the analysis of dust opacity

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -192,7 +192,7 @@ be the only molecules that specifically trace disks around high-mass stars.
 
 The observations presented here are described in \citet{Ginsburg2018b} as part
 of ALMA project 2016.1.00165.S.  We use the robust 0.5 weighted spectral cubes
-from all three bands (B3 3 mm, B6 1 mm, B7 0.85 mm) for our spectroscopic analysis.
+from all three bands (B3 3.0 mm, B6 1.3 mm, B7 0.87 mm) for our spectroscopic analysis.
 
 Appendix D of that paper describes the spectral extraction method, which we
 summarize here.  We used the U232.511 line (which we now identify as NaCl v=1
@@ -750,13 +750,15 @@ ALMA band, they are unaffected by changes in opacity with frequency.
 
 \referee{
 We measure the continuum within the spectral extraction region to have
-a mean brightness temperature $T_B=230, 220$ and $250$ K in our band 3, 6, and
-7 data, respectively.  These values are equivalent to within $\approx10\%$,
+a mean brightness temperature $T_B=230, 220$ and $250$ K in our 3 mm, 1.3 mm, and
+870 \um data, respectively.  These values are equivalent to within
+$\approx10\%$,
 which is the approximate calibration uncertainty of ALMA.  If the foreground
-cloud had significant optical depth, we would expect the band 7 brightness to
-be lower than at band 3; for dust with a typical interstellar medium opacity
-index $\beta=1.75$, the dust should be $\approx9\times$ optically thicker at
-345 GHz (band 7) than at 100 GHz (band 3).  Since we do not observe a lower
+cloud had significant optical depth, we
+would expect the 870 \um brightness to be lower than the 3 mm; for dust with a
+typical interstellar medium opacity index $\beta=1.75$, the dust should be
+$\approx9\times$ optically thicker at
+870 \um than at 3 mm.  Since we do not observe a lower
 brightness temperature at higher frequency, we conclude that the foreground
 cloud has a negligible effect on the observed line ratios.
 }
