rule out opacity

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -781,8 +781,11 @@ v=0 45-44}) \approx 9 \times T_{B}(\textrm{KCl v=0 13-12})$.
 If we assume a dust opacity index $\beta=2$,
 which is conservative in that it provides the greatest difference in opacity
 between the two frequencies, the dust opacity required to produce the observed ratio
-is $\tau_{345 \textrm{GHz}} = 2.8$.  If the dust opacity were this large,
-the lines would not be detectable in emission.
+is $\tau_{345 \textrm{GHz}} = 2.8$ and $\tau_{100 \textrm{GHz}} = 0.2$.  These optical
+depth differences in the dust would result in a substantially ($\approx4\times$) higher 
+dust brightness at 0.85 \um than at 3 mm, which is not observed.  We therefore
+rule out dust opacity within the disk as an explanation for the temperature
+discrepancy.
 }
 
 \bigskip
