--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -748,9 +748,10 @@ Because the vibrational temperatures are measured from lines within the same
 ALMA band, they are unaffected by changes in opacity with frequency.
 }
 
+% measurements in continuum_measurements_linestack_region.py
 \referee{
 We measure the continuum within the spectral extraction region to have
-a mean brightness temperature $T_B=230, 220$ and $250$ K in our 3 mm, 1.3 mm, and
+a mean brightness temperature $T_B=210, 200$ and $220$ K in our 3 mm, 1.3 mm, and
 870 \um data, respectively.  These values are equivalent to within
 $\approx10\%$,
 which is the approximate calibration uncertainty of ALMA.  If the foreground
