add comment, figure

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -794,6 +794,7 @@ rule out dust opacity within the disk as an explanation for the temperature
 discrepancy.
 }
 
+% resolution_comparison_nacl.py
 \referee{
 Finally, changes in dust opacity could affect which salt-emitting regions we
 are able to observe.  If the dust changes from optically thin at long
@@ -807,6 +808,7 @@ each of the observed frequency windows, as in Figure \ref{fig:spatial}, convolve
 resolution.  There are no clear morphological differences in the line emission regions.
 }
 
+% resolution_comparison_nacl.py
 \begin{figure*}[!htp]
 \includegraphics[scale=1,width=7in]{figures/resolution_comparison_nacl_peaks.pdf}
 \caption{Comparison of three NaCl emission lines in different wavebands viewed at
