expand dust opacity discussion

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -801,23 +801,32 @@ are able to observe.  If the dust changes from optically thin at long
 wavelengths, letting through all of the salt emission, to optically thick at
 shorter wavelengths, we would not detect signal at all from some regions, such
 as the hotter inner disk, and therefore receive a biased view of the rotational
-temperatures.  We cannot strictly rule this possibility out because such obscuration
-can occur on sub-beam scales.  However, the morphology of the salt lines does not change
-with frequency.  Figure \ref{fig:resolutioncomparison} shows a selected salt line from
-each of the observed frequency windows, as in Figure \ref{fig:spatial}, convolved to a common
-resolution.  There are no clear morphological differences in the line emission regions.
+temperatures.  We cannot strictly rule this possibility out because such
+obscuration can occur on sub-beam scales.  However, the morphology of the salt
+lines does not change with frequency.  Figure \ref{fig:resolutioncomparison}
+shows a selected salt line from each of the observed frequency windows, as in
+Figure \ref{fig:spatial}, convolved to a common resolution.  If selective
+obscuration was a significant effect, we would expect to see progressively less
+emission at higher frequencies, or perhaps missing emission at certain
+locations at higher frequencies.  There is a gap in the emission from the
+southwest part of the disk at 1.4 mm that becomes slightly more pronounced at
+0.87 mm, and the southeast end of the disk is brighter at 1.4 mm than at either
+3 mm or 0.87 mm, but overall the morphology is similar in all wavebands when
+viewed at the same resolution.  We attribute the remaining residuals to the
+different vibrational and rotational states selected for this comparison.
 }
 
 % resolution_comparison_nacl.py
 \begin{figure*}[!htp]
 \includegraphics[scale=1,width=7in]{figures/resolution_comparison_nacl_peaks.pdf}
-\caption{Comparison of three NaCl emission lines in different wavebands viewed at
-the same spatial resolution.  The columns show, from left to right, NaCl v=3 J=7-6,
-NaCl v=1 J=18-17, and NaCl v=2 J=26-25, as in Figure \ref{fig:spatial}.  The top row
-shows these images in their native resolution, the middle shows them convolved to
-the resolution of the 3 mm band (note that the 3 mm band image is unchanged, but is repeated
-because the color scale has changed), and the bottom row shows the difference images $T_{B,3 \mathrm{mm}} - T_{B, 1.4 \mathrm{mm}}$ 
-and $T_{B,3 \mathrm{mm}} - T_{B, 0.87 \mathrm{mm}}$. }
+\caption{Comparison of three NaCl emission lines in different wavebands viewed
+at the same spatial resolution.  The columns show, from left to right, NaCl v=3
+J=7-6, NaCl v=1 J=18-17, and NaCl v=2 J=26-25, as in Figure \ref{fig:spatial}.
+The top row shows these images in their native resolution, the middle shows
+them convolved to the resolution of the 3 mm band (note that the 3 mm band
+image is unchanged, but is repeated because the color scale has changed), and
+the bottom row shows the difference images $T_{B,3 \mathrm{mm}} - T_{B, 1.4
+\mathrm{mm}}$ and $T_{B,3 \mathrm{mm}} - T_{B, 0.87 \mathrm{mm}}$.  }
 }
 \label{fig:resolutioncomparison}
 \end{figure*}
